manifests/cluster-weavescope/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weave-scope
  namespace: weave
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "weave-scope-app"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - scope.stg.showks.containerdays.jp
      secretName: tls-certificate
  rules:
  - host: scope.stg.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: weave-scope-app
          servicePort: 80
